添加Excel通用操作工具

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,29 @@
         </dependencies>
     </dependencyManagement>
 
+    <!-- jar包引入 -->
+    <dependencies>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.gwssi.boot</groupId>
+            <artifactId>gwssi-boot-tools</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
