--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.gwssi.ecloud</groupId>
     <version>0.1-SNAPSHOT</version>
-    <artifactId>ecloud-goffice-util</artifactId>
+    <artifactId>ecloud-goffice-common</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
