--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cn.gwssi.ecloud</groupId>
+    <groupId>com.telecom</groupId>
     <version>0.1-SNAPSHOT</version>
     <artifactId>ecloud-goffice-common</artifactId>
 
@@ -17,47 +17,35 @@
     <!-- deploy 服务器 -->
     <distributionManagement>
         <repository>
-            <id>beacon</id>
-            <name>beacon</name>
-            <url>http://61.135.24.220:44423/repository/maven-releases/</url>
+            <id>nexus_release</id>
+            <name>release</name>
+            <url>http://127.0.0.1:8085/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>beacon-snapshot</id>
-            <name>beacon-snapshot</name>
-            <url>http://61.135.24.220:44423/repository/maven-snapshots/</url>
+            <id>nexus_snapshots</id>
+            <name>snapshots</name>
+            <url>http://127.0.0.1:8085/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
+
     <repositories>
         <repository>
-            <id>beacon</id>
-            <name>beacon</name>
-            <url>http://61.135.24.220:44423/repository/maven-releases/</url>
+            <id>maven</id>
+            <name>maven</name>
+            <url>http://127.0.0.1:8085/repository/maven-releases/</url>
         </repository>
         <repository>
-            <id>beacon-central</id>
-            <name>beacon-central</name>
-            <url>http://61.135.24.220:44423/repository/maven-central/</url>
+            <id>maven-central</id>
+            <name>maven-central</name>
+            <url>http://127.0.0.1:8085/repository/maven-central/</url>
         </repository>
         <repository>
-            <id>beacon-snapshot</id>
-            <name>beacon-snapshot</name>
-            <url>http://61.135.24.220:44423/repository/maven-snapshots/</url>
+            <id>maven-snapshot</id>
+            <name>maven-snapshot</name>
+            <url>http://127.0.0.1:8085/repository/maven-snapshots/</url>
         </repository>
     </repositories>
-
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>cn.gwssi.ecloud</groupId>
-                <artifactId>ecloud-module</artifactId>
-                <version>${ecloud-module.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <!-- jar包引入 -->
     <dependencies>
@@ -76,8 +64,9 @@
         </dependency>
 
         <dependency>
-            <groupId>cn.gwssi.ecloud</groupId>
+            <groupId>com.telecom</groupId>
             <artifactId>base-rest</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
